# terrain_mapping

src/obstacle_mapping/: CMakeLists.txt  package.xml
src/obstacle_mapping/config/: global.yaml  local_1.yaml  map_filter.yaml  offline.yaml
src/obstacle_mapping/include/: obstacle_mapping.h  pose_predicion.h  robot_model.h
src/obstacle_mapping/launch/: global.launch  local.launch  map_save.launch  offline.launch  pose.launch  pose_offline.launch  pose_prediction.launch  showmarker.launch  showpcd.launch  test.launch
src/obstacle_mapping/poses/: T_matrix_init.txt  T_matrix_iterated.txt  local_1.yaml
src/obstacle_mapping/poses/.ipynb_checkpoints/: T_matrix_iterated-checkpoint.txt
src/obstacle_mapping/poses/position/: trench_pos.txt
src/obstacle_mapping/rviz/: pose.rviz  showpcd.rviz  test.rviz
src/obstacle_mapping/scripts/: map_pose_cost.ipynb  readcsv.py  showmap.ipynb  showpose.ipynb
src/obstacle_mapping/scripts/.ipynb_checkpoints/: show_pose-checkpoint.py  showmap-checkpoint.ipynb  showpose-checkpoint.ipynb
src/obstacle_mapping/src/: gridmap_saver.cpp  key_pub_node.cpp  obstacle_mapping.cpp  obstacle_mapping_node.cpp  pose_prediction.cpp  pose_prediction_node.cpp  publish_points.cpp  recieve_points.cpp  show_vehicle_node.cpp  showpcd.cpp
src/obstacle_mapping/src/backup/: pose_prediction.cpp
src/obstacle_mapping/test_map/: 6t_hight.csv  elevation1.csv  elevation2.csv  elevation3.csv
src/obstacle_mapping/test_map/terrain/trench00/: criticalmap.csv  obstaclemap.csv  terrainmap.csv  traversabilitymap.csv
src/obstacle_mapping/test_map/terrain/wall00/: 0510-2-rqt_bag-wall01_02_revised_back.pcd  criticalmap.csv  elevation_BGKmap.csv  obstaclemap.csv  traversabilitymap.csv  wall00.pcd  wall00final.pcd
src/obstacle_mapping/test_map/terrain/wall01/: 0512-wall01-map_revised.pcd  criticalmap.csv  elevation_BGKmap.csv  obstaclemap.csv  traversabilitymap.csv
src/obstacle_mapping/test_map/vehicles/: 6t_hight.csv
src/rs_to_velodyne/launch/: run.launch
src/rs_to_velodyne/src/: rs_to_velodyne.cpp
